@@ -1,3 +1,12 @@
+2013-10-22  Andreas Kling  <akling@apple.com>
+
+        Minor VM* -> VM& cleanups in HashTable and Keywords.
+        <https://webkit.org/b/123183>
+
+        Turn some VM* variables that will never be null into VM&.
+
+        Reviewed by Geoffrey Garen.
+
 2013-10-22  Geoffrey Garen  <ggaren@apple.com>
 
         REGRESSION: `if (false === (true && undefined)) console.log("wrong!");` logs "wrong!", shouldn't!
